# python-ottype

./: .coveragerc  .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  benchmark.py  build-wheels.sh  docker-build-wheels.sh  docker-run-tests.sh  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yaml
extra/: old_ottype.py
ottype/: __init__.py  core.py  core_boost.c  core_boost.pyi  core_boost.pyx
scripts/: build-wheels.sh  run-tests.sh
tests/: __init__.py  test_core.py  utils.py
