[build-system]
requires = ["setuptools", "Cython"]
build-backend = "setuptools.build_meta"


[project]
name = "python-ottype"

authors = [{ email = "pjknkda@gmail.com" }, { name = "Jungkook Park" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
]
description = "A python implementation of Operational Transformation."
license = { text = "MIT License" }
readme = { file = "README.md", content-type = "text/markdown" }
urls = { Homepage = "https://github.com/pjknkda/python-ottype" }

requires-python = ">=3.9, <3.13"

dependencies = []
optional-dependencies = { dev = [
    "bandit==1.7.9",
    "black==24.4.2",
    "Cython==3.0.10",
    "flake8-bugbear==24.4.26",
    "flake8-isort==6.1.1",
    "flake8==7.1.0",
    "mypy==1.10.0",
    "pytest-cov==5.0.0",
    "pytest==8.2.2",
] }

dynamic = ["version"]


[tool.black]
line-length = 88


[tool.coverage.run]
source = ["ottype/*"]

[tool.coverage.report]
precision = 2
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]


[tool.isort]
profile = "black"
line_length = 88
virtual_env = "venv"


[tool.mypy]
python_version = "3.12"

check_untyped_defs = true

disallow_untyped_defs = true

warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true


[tool.pytest.ini_options]
addopts = "--cov-report html --cov=ottype"
testpaths = ["tests"]


[tool.setuptools]
packages = ["ottype"]
package-data = { ottype = ["py.typed"] }
zip-safe = false
dynamic = { version = { attr = "ottype.__version__" } }
