[build-system]
requires = ["Cython", "setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "python-ottype"

authors = [{ email = "pjknkda@gmail.com" }, { name = "Jungkook Park" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
]
description = "A python implementation of Operational Transformation."
license = { text = "MIT License" }
readme = { file = "README.md", content-type = "text/markdown" }
urls = { Homepage = "https://github.com/pjknkda/python-ottype" }

requires-python = ">=3.9, <3.14"

dependencies = []
optional-dependencies = { dev = [
    "bandit==1.8.6",
    "black==25.1.0",
    "Cython==3.1.2",
    "flake8-bugbear==24.12.12",
    "flake8-isort==6.1.2",
    "flake8==7.3.0",
    "mypy==1.16.1",
    "pytest-cov==6.2.1",
    "pytest==8.4.1",
    "setuptools-scm==8.3.1",
] }

dynamic = ["version"]


[tool.black]
line-length = 88


[tool.coverage.run]
source = ["ottype/*"]

[tool.coverage.report]
precision = 2
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]


[tool.isort]
profile = "black"
line_length = 88
virtual_env = "venv"


[tool.mypy]
python_version = "3.13"

check_untyped_defs = true

disallow_untyped_defs = true

warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "setuptools_scm"
ignore_missing_imports = true


[tool.pytest.ini_options]
addopts = "--cov-report html --cov=ottype"
testpaths = ["tests"]


[tool.setuptools]
packages = ["ottype"]
package-data = { ottype = ["py.typed"] }
zip-safe = false


[tool.setuptools_scm]
write_to = "ottype/_version.py"